Thu Aug 30 01:47:11 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* doc/README: Purpose paragraph still talked about two functions
	being created; Reindent the License section.

Tue Aug 28 00:32:02 CEST 2007  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: version is v1.03.
	* doc/example/{module.cmhg, main.c}: Added support for service call
	Service_ResourceFSStarting.
	* doc/example/TestData/Resources: Renamed to...
	* doc/example/TestData/ThirdParty: ...this.
	* doc/example/Makefile: Go for -O3, it makes a useful difference.
	* doc/README: updated now we can properly support
	Service_ResourceFSStarting; reworded the example section a bit;
	Added License section.
	* AUTHORS: Added myself.
	* src/mkresfs.c: Added new option -s which names the function name
	to reregister data with ResourceFS at Service_ResourceFSStarting
	time; Make sure all errors result in non-0 return value; Using
	version number from generated config.h file; Using inline assembler
	in the generated C file; fixed problem that the last incomplete word
	of resource data file got wrongly omited resulting in corrupted
	ResourceFS data block; support RISC OS time of resource data
	* COPYING: Added GCCSDK Developers to (c) line.

Sun Jul 29 23:20:08 2007  John Tytgat  <John.Tytgat@aaug.net>

	* ., src: Added svn:ignore property.

Sun Jul 29 19:25:01 2007  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: corrected version number to v1.02.

Sun Jul 29 18:29:17 2007  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Added.
	* doc/README: Corrected rjek's contact address.

Thu Jun 14 03:37:52 2007  Rob Kendrick  <rjek@rjek.com>

	* src/mkresfs.c: Add generation of a suitable header file; Add guard
	#define around emitted header files; Remove C99ism as this isn't
	default in current GCCSDK, and add a header file needed on RISC OS
	for __riscosify(); Fix termination bug in guard name generation;
	Remove redundant limitation comment; Bump version number to 1.02.